# mpd-current-json

./: .gitignore  CHANGELOG.md  CHANGELOG.org  LITERATE.org  Main.hs  Makefile  Options.hs  README.md  README.org  Version.hs  mpd-current-json.c  mpd-current-json.cabal
c-example/: README.org  mpd-current-json.c
lib/Network/MPD/: JSON.hs  Parse.hs
src/: Main.hs  Options.hs
