cabal-version:      3.0
name:               mpd-current-json
version:            0.1.0.0
synopsis:           Print current MPD song and status as json

-- A longer description of the package.
-- description:
homepage:           https://codeberg.org/useless-utils/mpd-current-json

-- A URL where users can report bugs.
-- bug-reports:
license:            Unlicense
license-file:       UNLICENSE
author:             Lucas G
maintainer:         g@11xx.org

-- A copyright notice.
-- copyright:
category:           Network
extra-source-files: CHANGELOG.org

executable mpd-current-json
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
                    , libmpd == 0.10.*

    -- Directories containing source files.
    -- hs-source-dirs:
    default-language: Haskell2010
